package-analytics/main/default/objects/PackageSubscriberOrg__c/PackageSubscriberOrg__c.object-meta.xml
<CustomObject>
    <label>Package Subscriber Org</label>
    <nameField>
        <label>Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Subscriber Orgs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>