package-analytics/main/default/objects/PackageSubscriberOrg__c/fields/InstalledStatus__c.field-meta.xml
<CustomField>
    <fullName>InstalledStatus__c</fullName>
    <label>Installed Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>