package-analytics/main/default/objects/PackageSubscriberOrg__c/fields/InstanceName__c.field-meta.xml
<CustomField>
    <fullName>InstanceName__c</fullName>
    <label>Instance Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>