package-analytics/main/default/objects/PackageSubscriberOrg__c/fields/InstanceNameFormula__c.field-meta.xml
<CustomField>
    <fullName>InstanceNameFormula__c</fullName>
    <formula
  >HYPERLINK(&apos;https://status.salesforce.com/instances/&apos; + InstanceName__c, InstanceName__c, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instance</label>
    <type>Text</type>
</CustomField>