package-analytics/main/default/objects/PackageSubscriberOrg__c/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <externalId>true</externalId>
    <label>Org ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>