package-analytics/main/default/objects/PackageSubscriberOrg__c/fields/OrgStatus__c.field-meta.xml
<CustomField>
    <fullName>OrgStatus__c</fullName>
    <label>Org Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>