package-analytics/main/default/objects/PackageSubscriberOrg__c/fields/OrgType__c.field-meta.xml
<CustomField>
    <fullName>OrgType__c</fullName>
    <label>Org Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
                <color>#009900</color>
                <label>Production</label>
            </value>
            <value>
                <fullName>Sandbox</fullName>
                <color>#3366FF</color>
                <label>Sandbox</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>