package-analytics/main/default/objects/PackageSubscriberOrg__c/fields/PackageNamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>PackageNamespacePrefix__c</fullName>
    <formula>PackageVersion__r.Package__r.NamespacePrefix__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Namespace</label>
    <type>Text</type>
</CustomField>