package-analytics/main/default/objects/PackageSubscriberOrg__c/fields/PackageSubscriberId__c.field-meta.xml
<CustomField>
    <fullName>PackageSubscriberId__c</fullName>
    <externalId>true</externalId>
    <label>Package Subscriber ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>