package-analytics/main/default/objects/PackageSubscriberOrg__c/fields/PackageVersion__c.field-meta.xml
<CustomField>
    <fullName>PackageVersion__c</fullName>
    <label>Package Version</label>
    <referenceTo>PackageVersion__c</referenceTo>
    <relationshipLabel>Package Installs</relationshipLabel>
    <relationshipName>PackageSubscriberOrgs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>