package-analytics/main/default/objects/PackageSubscriberOrg__c/fields/PackageVersionNumberFormula__c.field-meta.xml
<CustomField>
    <fullName>PackageVersionNumberFormula__c</fullName>
    <formula>PackageVersion__r.VersionNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Version Number</label>
    <type>Text</type>
</CustomField>