package-analytics/main/default/objects/PackageSubscriberOrg__c/fields/ParentOrg__c.field-meta.xml
<CustomField>
    <fullName>ParentOrg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Org</label>
    <referenceTo>PackageSubscriberOrg__c</referenceTo>
    <relationshipLabel>Related Orgs</relationshipLabel>
    <relationshipName>RelatedOrgs</relationshipName>
    <type>Lookup</type>
</CustomField>