package-analytics/main/default/objects/PackageSubscriberOrg__c/fields/ParentOrgFormula__c.field-meta.xml
<CustomField>
    <fullName>ParentOrgFormula__c</fullName>
    <formula>IF(
  ISBLANK(ParentOrg__c),
  ParentOrgId__c,
  HYPERLINK(&apos;/&apos; + ParentOrg__c, ParentOrg__r.Name)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Org</label>
    <type>Text</type>
</CustomField>