package-analytics/main/default/objects/PackageSubscriberOrg__c/fields/ParentOrgId__c.field-meta.xml
<CustomField>
    <fullName>ParentOrgId__c</fullName>
    <label>Parent Org ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>