package-analytics/main/default/objects/PackageSubscriberOrg__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PackageVersion__c</columns>
    <columns>PackageVersionNumberFormula__c</columns>
    <columns>PackageNamespacePrefix__c</columns>
    <columns>OrgId__c</columns>
    <columns>OrgType__c</columns>
    <columns>OrgStatus__c</columns>
    <columns>ParentOrgFormula__c</columns>
    <columns>LastUpdated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>